[package]
name = "rustling-ontology"
version = "0.17.4"
authors = ["hdlj <hubert.delajonquiere@snips.net>"]
build = "build.rs"

[workspace]
members=["values", "cli", "cli-debug", "moment", "json-utils",
        "grammar", "grammar/de", "grammar/en", "grammar/es", "grammar/fr", "grammar/ko", "grammar/zh", "grammar/ja"]

[dependencies]
rmp-serde = "0.13"
serde = "1.0"
serde_derive = "1.0"
rustling = { git="https://github.com/snipsco/rustling", tag="0.9.0" }
rustling-ontology-moment = { path="moment"}
rustling-ontology-values = { path="values"}
rustling-ontology-grammar = { path="grammar" }

[dev-dependencies]
bencher = { git="https://github.com/snipsco/bencher", rev="63910ace" }
rustling-ontology-json-utils = { path="json-utils" }
serde_json = "1.0"


[build-dependencies]
rmp-serde = "0.13"
serde = "1.0"
serde_derive = "1.0"
rustling = { git="https://github.com/snipsco/rustling", tag="0.9.0" }
rustling-ontology-values = { path="values"}
rustling-ontology-moment = { path="moment"}
rustling-ontology-grammar = { path="grammar" }

[[bench]]
name = "example"
harness = false
