[package]
name = "rustling-ontology"
version = "0.19.2"
authors = ["hdlj <hubert.delajonquiere@snips.net>"]
build = "build.rs"
edition = "2018"

[workspace]
members=["values", "cli", "cli-debug", "moment", "json-utils",
        "grammar", "grammar/de", "grammar/en", "grammar/es", "grammar/pt", "grammar/fr", "grammar/ko", "grammar/zh", "grammar/ja", "grammar/it"]

[dependencies]
rmp-serde = "0.14"
serde = { version = "1.0", features = ["derive"] }
rustling = { git = "https://github.com/snipsco/rustling", tag="0.9.1" }
rustling-ontology-moment = { path = "moment" }
rustling-ontology-values = { path = "values" }
rustling-ontology-grammar = { path = "grammar" }

[dev-dependencies]
bencher = { git = "https://github.com/snipsco/bencher", rev="63910ace" }
rustling-ontology-json-utils = { path = "json-utils" }
serde_json = "1.0"


[build-dependencies]
rmp-serde = "0.14"
serde = { version = "1.0", features = ["derive"] }
rustling = { git = "https://github.com/snipsco/rustling", tag="0.9.1" }
rustling-ontology-values = { path = "values" }
rustling-ontology-moment = { path = "moment" }
rustling-ontology-grammar = { path = "grammar" }

[[bench]]
name = "example"
harness = false
