[package]
name = "rustling-cli"
version = "0.19.2"
authors = ["hdlj <hubert.delajonquiere@snips.net>", "Mathieu Poumeyrol <kali@zoy.org>"]
edition = "2018"

[dependencies]
clap = "2"
prettytable-rs = "0.6"
rustling-ontology = { path = ".." }
rustling-ontology-json-utils = { path = "../json-utils" }
rustling-ontology-moment = { path = "../moment" }
serde_json = "1.0"
