[package]
name = "rustling-ontology-grammar"
version = "0.17.4"
authors = ["hdlj <hubert.delajonquiere@snips.net>"]

[dependencies]
rustling = { git="https://github.com/snipsco/rustling", tag="0.9.0" }
rustling-ontology-de = { path="de"}
rustling-ontology-en = { path="en"}
rustling-ontology-es = { path="es"}
rustling-ontology-fr = { path="fr"}
rustling-ontology-ko = { path="ko"}
rustling-ontology-zh = { path="zh"}
rustling-ontology-ja = { path="ja"}
rustling-ontology-values = { path="../values"}
