[package]
name = "rustling-ontology-grammar"
version = "0.19.3"
authors = ["hdlj <hubert.delajonquiere@snips.net>"]
edition = "2018"

[dependencies]
rustling = { git = "https://github.com/snipsco/rustling", tag = "0.9.1" }
rustling-ontology-de = { path = "de" }
rustling-ontology-en = { path = "en" }
rustling-ontology-es = { path = "es" }
rustling-ontology-fr = { path = "fr" }
rustling-ontology-pt = { path = "pt" }
rustling-ontology-ko = { path = "ko" }
rustling-ontology-zh = { path = "zh" }
rustling-ontology-ja = { path = "ja" }
rustling-ontology-it = { path = "it" }
rustling-ontology-values = { path = "../values" }
