[package]
name = "rustling-ontology-json-utils"
version = "0.19.2"
authors = ["Hubert De La Jonquiere <hubert.delajonquiere@snips.net>"]
edition = "2018"

[dependencies]
rustling-ontology-moment = { path = "../moment" }
rustling-ontology = { path =".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
