[package]
name = "rustling-ontology-rules"
version = "0.8.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]

[dependencies]
regex = "0.2"
rustling = { git="http://github.com/snipsco/rustling", rev="0.4.0" }
rustling-ontology-moment = { path="../moment"}
rustling-ontology-values = { path="../values"}
