[package]
name = "rustling-ontology-rules"
version = "0.11.1"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]

[dependencies]
regex = "0.2"
rustling = { git="http://github.com/snipsco/rustling", rev="0.5.0" }
rustling-ontology-moment = { path="../moment"}
rustling-ontology-values = { path="../values"}
