[package]
name = "rustling-ontology-rules"
version = "0.14.7"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]

[dependencies]
regex = "0.2"
rustling = { git="http://github.com/snipsco/rustling", tag="0.8.1" }
rustling-ontology-moment = { path="../moment"}
rustling-ontology-values = { path="../values"}
