[package]
name = "rustling-ontology-training"
version = "0.12.1"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]

[dependencies]
rustling = { git="http://github.com/snipsco/rustling", tag="0.6.0" }
rustling-ontology-values = { path="../values" }
rustling-ontology-rules = { path="../rules" }
rustling-ontology-moment = { path = "../moment" }
