[package]
name = "rustling-ontology-es"
version = "0.19.1"
authors = ["hdlj <hubert.delajonquiere@snips.net>"]
edition = "2018"

[dependencies]
rustling = { git = "https://github.com/snipsco/rustling", tag="0.9.1" }
rustling-ontology-moment = { path = "../../moment" }
rustling-ontology-values = { path = "../../values" }
