[package]
name = "rustling-ontology-ja"
version = "0.19.3"
authors = ["Anaïs <anais@chanclu.fr>"]
edition = "2018"

[dependencies]
regex = "1"
rustling = { git = "https://github.com/snipsco/rustling", tag = "0.9.1" }
rustling-ontology-moment = { path = "../../moment" }
rustling-ontology-values = { path = "../../values" }
