[package]
name = "rustling-ontology-ko"
version = "0.17.4"
authors = ["hdlj <hubert.delajonquiere@snips.net>"]

[dependencies]
failure = "0.1.1"
regex = "0.2"
rustling = { git="https://github.com/snipsco/rustling", tag="0.9.0" }
rustling-ontology-moment = { path="../../moment"}
rustling-ontology-values = { path="../../values"}
