[package]
name = "rustling-ontology-ko"
version = "0.19.1"
authors = ["hdlj <hubert.delajonquiere@snips.net>"]

[dependencies]
failure = "0.1"
regex = "1.0"
rustling = { git="https://github.com/snipsco/rustling", tag="0.9.0" }
rustling-ontology-moment = { path="../../moment"}
rustling-ontology-values = { path="../../values"}
