[package]
name = "rustling-ontology-ko"
version = "0.19.3"
authors = ["hdlj <hubert.delajonquiere@snips.net>"]
edition = "2018"

[dependencies]
failure = "0.1"
regex = "1"
rustling = { git = "https://github.com/snipsco/rustling", tag = "0.9.1" }
rustling-ontology-moment = { path = "../../moment" }
rustling-ontology-values = { path = "../../values" }
